src/test/deca/context/invalid/renduInitial/01undefvar.deca
{
	int z ;
	z=1 ;
	println(z);
	println(y);
}